prod_snapshot_2015-09-24_1030/objects/DealChicken_Opportunity_Junction__c.object
<CustomObject>
    <fields>
        <fullName>DealChicken_Market_Junction__c</fullName>
        <label>DealChicken Market Junction</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>DealChicken Opportunity Junctions</relationshipLabel>
        <relationshipName>DealChicken_Opportunity_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DealChicken_Opportunity__c</fullName>
        <label>DealChicken Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DealChicken Opportunity Junctions</relationshipLabel>
        <relationshipName>DealChicken_Opportunity_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X22__c</fullName>
        <formula>DealChicken_Opportunity__r.DealChicken_Market__c</formula>
        <label>22</label>
        <type>Text</type>
    </fields>
    <label>DealChicken Opportunity Junction</label>
    <nameField>
        <label>DealChicken Opportunity Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealChicken Opportunity Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>